# cv-playground

./: .gitignore
compile-gcc/: CMakeLists.txt  DisplayImage.cpp  README.md
master-opencv-py/module01-getting-started-with-images/: 01_01_Reading_Displaying_Saving_Images.ipynb  01_04_Annotating_Images.ipynb
master-opencv-py/module01-getting-started-with-images/.ipynb_checkpoints/: 01_03_Basic_Image_Manipulations-checkpoint.ipynb
master-opencv-py/module01-getting-started-with-images/__MACOSX/: ._module01-getting-started-with-images
master-opencv-py/module01-getting-started-with-images/__MACOSX/module01-getting-started-with-images/: ._01_01_Reading_Displaying_Saving_Images.ipynb  ._01_04_Annotating_Images.ipynb  ._html-m1
master-opencv-py/module01-getting-started-with-images/__MACOSX/module01-getting-started-with-images/html-m1/: ._01_01_Reading_Displaying_Saving_Images.html  ._01_02_Color_Images.html  ._01_03_Basic_Image_Manipulations.html  ._01_04_Annotating_Images.html
master-opencv-py/module01-getting-started-with-images/html-m1/: 01_01_Reading_Displaying_Saving_Images.html  01_03_Basic_Image_Manipulations.html  01_04_Annotating_Images.html
master-opencv-py/module02-arithmetic-logical-thresholding/: 02_02_Thresholding.ipynb
